Classification Tunes + Integrated to App

--- a/Machine Learning/Regression_Models.ipynb
+++ b/Machine Learning/Regression_Models.ipynb
@@ -2505,7 +2505,7 @@
    "outputs": [],
    "source": [
     "# Show the valid and predicted prices\n",
-    "original"
+    "original\n"
    ]
   }
  ],
