ML App, Main App Complete

--- a/Machine Learning/Classification_Models.ipynb
+++ b/Machine Learning/Classification_Models.ipynb
@@ -4119,6 +4119,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving Model and Testing Model on Google Stock Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {},
@@ -4507,123 +4514,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Recommender</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2012-06-04</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-05</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-06</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-07</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-08</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-28</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-29</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-05-02</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-05-03</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-05-04</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2497 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Recommender\n",
-       "Date                   \n",
-       "2012-06-04            0\n",
-       "2012-06-05            0\n",
-       "2012-06-06            0\n",
-       "2012-06-07            0\n",
-       "2012-06-08            0\n",
-       "...                 ...\n",
-       "2022-04-28            0\n",
-       "2022-04-29            0\n",
-       "2022-05-02            0\n",
-       "2022-05-03            0\n",
-       "2022-05-04            0\n",
-       "\n",
-       "[2497 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 213,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 214,
    "metadata": {},
    "outputs": [
@@ -4661,125 +4551,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Recommender</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2012-06-04</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-05</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-06</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-07</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-06-08</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-28</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-29</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-05-02</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-05-03</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-05-04</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2497 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Recommender\n",
-       "Date                   \n",
-       "2012-06-04            0\n",
-       "2012-06-05            0\n",
-       "2012-06-06            0\n",
-       "2012-06-07            0\n",
-       "2012-06-08            0\n",
-       "...                 ...\n",
-       "2022-04-28            0\n",
-       "2022-04-29            0\n",
-       "2022-05-02            0\n",
-       "2022-05-03            0\n",
-       "2022-05-04            0\n",
-       "\n",
-       "[2497 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 215,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 216,
    "metadata": {},
    "outputs": [],
@@ -4791,20 +4562,6 @@
     "scaler = MinMaxScaler(feature_range=(0,1))\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Handling Imbalance data using SMOTE\n",
-    "from imblearn import under_sampling, over_sampling\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "\n",
-    "oversample = SMOTE()\n",
-    "Xsmote, ysmote = oversample.fit_resample(X_train, y_train)\n"
    ]
   },
   {
